Add suffix to project name for pyo3

--- a/benchmarks/benchmarks.ipynb
+++ b/benchmarks/benchmarks.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import polars as pl\n",
-    "import polars_ds as pds"
+    "import polars_ds_elastic_net as pds"
    ]
   },
   {
