--- a/examples/basics.ipynb
+++ b/examples/basics.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import polars as pl\n",
-    "import polars_ds as pds\n",
+    "import polars_ds_elastic_net as pds\n",
     "import numpy as np"
    ]
   },
@@ -1945,7 +1945,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars_ds as pds\n",
+    "import polars_ds_elastic_net as pds\n",
     "size = 2000\n",
     "df = pl.DataFrame({\n",
     "    \"id\": range(size), \n",
