--- a/examples/diagnosis.ipynb
+++ b/examples/diagnosis.ipynb
@@ -20,8 +20,8 @@
    "outputs": [],
    "source": [
     "import polars as pl\n",
-    "import polars_ds as pds\n",
-    "from polars_ds.diagnosis import DIA"
+    "import polars_ds_elastic_net as pds\n",
+    "from polars_ds_elastic_net.diagnosis import DIA"
    ]
   },
   {
@@ -2501,8 +2501,8 @@
    ],
    "source": [
     "import polars as pl\n",
-    "import polars_ds as pds\n",
-    "from polars_ds.diagnosis import DIA\n",
+    "import polars_ds_elastic_net as pds\n",
+    "from polars_ds_elastic_net.diagnosis import DIA\n",
     "# Only used to get dataset.\n",
     "from sklearn import datasets\n",
     "\n",
