--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import polars as pl\n",
     "import polars.selectors as cs\n",
-    "from polars_ds.pipeline import Pipeline, Blueprint"
+    "from polars_ds_elastic_net.pipeline import Pipeline, Blueprint"
    ]
   },
   {
@@ -938,7 +938,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from polars_ds.pipeline import Blueprint, FitStep\n",
+    "from polars_ds_elastic_net.pipeline import Blueprint, FitStep\n",
     "from typing import Self, Union, List\n",
     "from functools import partial\n",
     "\n",
