--- a/examples/sample_and_split.ipynb
+++ b/examples/sample_and_split.ipynb
@@ -23,8 +23,8 @@
    "outputs": [],
    "source": [
     "import polars as pl\n",
-    "import polars_ds as pds\n",
-    "import polars_ds.sample_and_split as sa"
+    "import polars_ds_elastic_net as pds\n",
+    "import polars_ds_elastic_net.sample_and_split as sa"
    ]
   },
   {
