--- a/benchmarks/linear_regression.ipynb
+++ b/benchmarks/linear_regression.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import polars as pl\n",
     "import pandas as pd\n",
-    "import polars_ds as pds\n",
-    "import polars_ds.linear_models as pds_linear\n",
+    "import polars_ds_elastic_net as pds\n",
+    "import polars_ds_elastic_net.linear_models as pds_linear\n",
     "# Requires version >= v0.5.1\n",
     "print(pds.__version__)"
    ]
